class Counter:
    def __init__(self):
        self.customers = []